--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <ul>
                 <li class="card">
-                    <a href="https://seed2whale.github.io/makao-bank/">
+                    <a href="https://zzezzee.github.io/makao-bank/">
                         <div class="thumbnail">
                             <img src="./images/makao-bank.png" alt="">
                         </div>
@@ -85,7 +85,7 @@
                     </a> 
                 </li>
                 <li class="card">
-                    <a href="https://seed2whale.github.io/mega-talk/">
+                    <a href="https://zzezzee.github.io/mega-talk/">
                         <div class="thumbnail">
                             <img src="./images/mega-talk.png" alt="">
                         </div>
@@ -102,7 +102,7 @@
                     </a> 
                 </li>
                 <li class="card">
-                    <a href="https://seed2whale.github.io/makao-letter/">
+                    <a href="https://zzezzee.github.io/makao-letter/">
                         <div class="thumbnail">
                             <img src="./images/makao-letter.png" alt="">
                         </div>
